Gallery.UI/gallery/src/index.css
:root {
  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
  font-family: 'hero-new', sans-serif;
  line-height: 1.5;
  font-weight: 400;

  /* color-scheme: light dark; */
  /* color: rgba(255, 255, 255, 0.87); */
  /* background-color: #242424; */

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  
}
* {
    margin:0;
    padding:0;
}
#root, body {
    width: 100%;
    display: flex;
    max-width: 1920px;
    align-items: center;
    /* justify-content: center; */
    flex-direction: column;
    
}
body{
    margin: auto;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  /* background-color: #1a1a1a; */
  cursor: pointer;
  /* transition: border-color 0.25s; */
}
button:hover {
  /* border-color: #646cff; */
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

/* @media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
} */


/*app*/
header {
    background-color: white;
    height: 4rem;
    width: 100%;
    display:flex;
    flex-direction: row;
    flex-wrap: wrap;
    /* justify-content: space-between; */
    align-items: center;
    transition: all ease-in 0.2s;

}
.header-shadow {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.459);
transition: all ease-in 0.2s;

}
.header-main{
    width: 100%;
    display: flex;
    justify-content: space-between;
}
nav {
    background-color: white;
    height: 100%;
}
.menu-hidden {
    display: none;
}
.menu-show {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: flex-start;
    position: absolute;
    z-index: 10;
    width: 100%;
    height: 100%;
    top:4rem;
}
.menu-show a {
    width: 100%;
    height: 3rem;
    font-size: 2rem;
    padding: 0.5rem 1.5rem 0.5rem 0;
}
header .logo{
    margin-left: 1.5rem;
    font-size: 1.5rem;
    font-weight: 600;
    text-transform: uppercase;
    color:rgb(59, 59, 59);

}
.burger-btn {
    background: none;
    padding: 0;
    margin-right: 1.5rem;
    color:rgb(59, 59, 59);
}
/* header .menu {
    margin-right: 2rem;
    text-align: right;
} */
header a {
    font-size: 1.2rem;
    text-decoration: none;
    color:rgb(59, 59, 59);


    text-align: right;
    text-transform: uppercase;
    font-weight: 600;
    transition: all ease-in 0.1s;

}
.logo:hover{
    color:rgb(0, 0, 0);
    cursor: pointer;
    box-shadow: none;

}
header a:hover{
    /* background-color: rgba(0, 0, 0, 0.1); */
    /* text-decoration: underline 2px; */
    transition: all ease-in 0.1s;
    /* box-shadow: 0 0 40px rgba(0, 0, 0, 0.1) inset; */
    color:rgb(0, 0, 0);

}

header a:active, .logo:active, .burger-btn:active{
    color:rgb(0, 0, 0);
}


.admin-sign-in-btn, .admin-sign-out-btn{
    align-self: flex-end;
    margin-right: 2rem;
}
.admin-info{
    margin-top: 5rem;
}




.manager-page{
    width: calc(100% - 4rem);
    /* margin:auto; */
    padding: 0 2rem 0 2rem!important;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.manager-header {
    width: 100%;
}
.manager-title {
    margin: auto;
    font-size: 3rem;
    text-align: center;
}
.manager-selector{
    width:100%;
    display: flex;
    justify-content: space-between;
}
.manager-selector button {
    width: 49%;
}
.selected {
    background-color: gray;
}
.manager-section {
    width: 100%;
}
.submit-btn {
    margin-top: 2rem;
}


.collection-card{
    width: 25%;
    height: 25rem;
    padding:0.5rem;
}


/* image manager*/
.image-manager-container, .collection-manager-container  {
    margin-top:1rem;
    display:flex;
}
.image-manager-form, .collection-manager-form {
    width: 30%;
}
.image-results-container, .collection-results-container {
    width: 70%;
    display:flex;
    flex-wrap: wrap;
    flex-direction: row;
}
.image-results-title, .collection-results-title{
    flex-basis: 100%;
    text-align: center;
}


.image-card, .collection-card{
    width: calc(25% - 0.5rem);
    padding:0.25rem;
    transition: 0.2s ease;
}
.image-card:hover{
    /* background-color: rgb(192, 192, 192); */
}
.record-image{
    width: 100%;
    height:20rem;
    object-fit: cover;
}
.record-details-container{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.record-details * {
    margin:0;
}
.record-delete-btn{
    width: 2.5rem;
    height: 2.5rem;
    border-radius: 100%;
    opacity: 0;
    transition: .5s ease;
    text-align: center;
    padding:0; 
    margin:0;
}
.material-symbols-outlined{
    /* transform: translate(0, 10%); */
    /* color:white; */
    font-size: 2rem;
}
.image-card:hover .record-delete-btn,
.collection-card .record-delete-btn{
    opacity: 1;
    /* background-color: rgba(180, 0, 0, 0.925); */
    
}


.collection-container{
    padding-top:0.5rem;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    /* justify-content: space-between; */
}
.collection-thumbnail-container{
    width: calc(33% - 0.5rem);
    margin: 0 0.25rem 0.5rem 0.25rem;
    position: relative;
    overflow: hidden;
    cursor: pointer;
}
.collection-thumbnail-img {
    width:100%;
    height:100%;
    object-fit: cover;
    transition: all ease-in 0.1s;

}
.collection-thumbnail-tooltip {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity:0;
    color:white;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
    transition: all ease-in 0.1s;

}
.collection-thumbnail-container:hover .collection-thumbnail-tooltip{
    background-color: rgba(0, 0, 0, 0.616);
    opacity: 1;
}
.collection-thumbnail-container:hover img{
    transform: scale(1.1);
}



#lightbox {
    z-index: 3;
    width: 100%;
    height: 100%;
    max-width: inherit;
    position: relative;
    /* display: flex; */
}
#backdrop{
    backdrop-filter: brightness(10%) blur(15px);
    position: fixed;
    width: 100%;
    height: 100%;
    cursor: pointer;
    z-index: 2;
}

.stop-scrolling {
    height: 100%;
    width: 100%;
    overflow: hidden;
}
.lightbox-img{
    position: fixed;
    transform: translate(-50%, -50%);
    width: 100%;
    /* max-height: 80%; */
    object-fit: cover;
    max-width: inherit;
    
    z-index: 3;
    top:50%;
    left:50%;
}
.lightbox-info{
    position: fixed;
    display: flex;
    flex-direction: column;
    width: 100%;
    bottom:0;
    left:0;
    justify-content: center;
    align-items: center;
    z-index: 4;
}
.lightbox-image-info{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.lightbox-info p{
    color:rgb(255, 255, 255);
    text-shadow:rgba(0, 0, 0, 0.9) 0 0 7px;

    margin:1rem;
    text-transform: uppercase;
}
.lightbox-btn-container-left{
    position: absolute;
    /* top:50%; */

    left:1rem;
}
.lightbox-btn-container-close{
    position: absolute;
    right:3rem;
}
.lightbox-btn-container-right{
    position: absolute;

    right:3rem;
}
.lightbox-btn-left,
.lightbox-btn-right,
.lightbox-btn-close {
    
    background: none;
    position: fixed;
    z-index: 4;
    color:rgb(255, 255, 255);
    transition: all ease 0.2s;
    padding: 0;
}

.lightbox-btn-left span,
.lightbox-btn-right span,
.lightbox-btn-close span{
    text-shadow:rgba(0, 0, 0, 0.5) 0 2px 20px;
    transition: all ease 0.2s;
}
.lightbox-btn-left:hover span,
.lightbox-btn-right:hover span,
.lightbox-btn-close:hover span{
    text-shadow:rgba(0, 0, 0, 0.9) 0 0 7px;
}
.lightbox-btn-left:hover,
.lightbox-btn-right:hover,
.lightbox-btn-close:hover{
    text-shadow:rgba(0, 0, 0, 0.9) 0 0 7px;
    transform: scale(130%);
}
.lightbox-btn-left:active,
.lightbox-btn-right:active,
.lightbox-btn-close:active{
    text-shadow:rgba(0, 0, 0, 0.5) 0 0 0px;
    color:rgba(255, 255, 255, 0.5);

    transform: scale(90%);
}


.lightbox-btn-left{
    top:50%;
    /* left:0.5rem; */
}
.lightbox-btn-right{
    top:50%;
}
.lightbox-btn-close{
    top:1rem;
    /* right:0.5rem; */
}












/* MEDIA QUERIES */
@media screen and (min-width: 992px) {
    .collection-thumbnail-container{
        width: calc(25% - 0.5rem);
    }
    .lightbox-img {
        max-height: 80%;
        width:auto;
    }

    header {
        justify-content: space-between;
        overflow: hidden;
        z-index:2;
        top:0;
        position: sticky;

    }
    
    .header-main{
        width: auto;
    }
    .burger-btn {
        display: none;
    }
    .menu-hidden, .menu-show {
        display:flex;
        justify-content: center; /* Align horizontal */
        align-items: center; /* Align vertical */
        
    }
    header a {
        padding:1rem;
        height: 100%;
        margin:auto;
        /* font-weight: 600; */
    }

@media screen and (min-width: 1200px) {
    .collection-thumbnail-container{
        width: calc(20% - 0.5rem);
    }

    
}


/* KEYFRAMES */

.fadeInFilter {
    animation-name: fadeInFilter;
    animation-duration: 0.1s;
    animation-iteration-count: 1;
    animation-timing-function: ease-out;
}
.fadeOutFilter {
    animation-name: fadeOutFilter;
    animation-duration: 0.15s;
    animation-iteration-count: 1;
    animation-timing-function: ease-in;
}

@keyframes fadeInFilter {
    from {opacity: 0;}
    to {opacity:1;}
}
@keyframes fadeOutFilter {
    from {opacity: 1;}
    to {opacity:0;}
}

